# ice-database

./: .gitignore  CHANGELOG.md  DICTIONARY.md  LICENSE  README.md  build_database.py  publish_to_hf.py  pyproject.toml
examples/: colab_quickstart.ipynb  query_examples.sql
scripts/: rebuild_ice.sh
